--- a/server/templates/dna.html
+++ b/server/templates/dna.html
@@ -13,18 +13,16 @@
       </ul>
     </div> <!-- end of dna_header -->
     <div id="dna_content">
-      <ul>
       <!--
       <table class="dna_line">
         <tbody>
-          <li class="dna_tag"></li>
-          <li class="first_strand"></li>
-          <li class="second_strand"></li>
-          <li class="dna_unit"></li>
+          <tr class="dna_tag"><td></td></tr>
+          <tr class="first_strand"><td></td></tr>
+          <tr class="second_strand"><td></td></tr>
+          <tr class="dna_unit"><td></td></tr>
         </tbody>
       </table>
       -->
-      </ul>
     </div> <!-- end of dna_content -->
   </div> <!-- end of dna_main -->
   <div id="dna_aside">
