--- a/server/templates/dna.html
+++ b/server/templates/dna.html
@@ -16,8 +16,8 @@
       <!--
         <div class="dna_line">
           <div class="dna_tag"><span></span></div>
-          <div><input class="first_strand" type="text /></div>
-          <div><input class="second_strand" type="text /></div>
+          <div><input class="first_strand" type="text /><span></span></div>
+          <div><input class="second_strand" type="text /><span></span></div>
           <div class="dna_unit"><span></span></div>
         </div>
       -->
@@ -30,8 +30,15 @@
 </div> <!-- end of dna_container -->
 
 <!--modal box-->
-<div id="modal_box">
-</div>
+<div id="dna_modal_box">
+  <div>
+    <p>21-8-2014 at: 19:32:49</p>
+    <i class="trash icon"></i>
+  </div>
+  <div class="ui input">
+    <input type="text" placeholder="scott">
+  </div>
+</div> <!-- end of dna_modal_box -->
 {% endblock content%}
 {% block script %}
   <script type="text/javascript" src="static/js/cursor-controller.js"></script>
