--- a/server/static/css/dna.css
+++ b/server/static/css/dna.css
@@ -22,13 +22,14 @@
 
 #dna_header {
   width: 100%;
-  height: 70px;
+  height: 130px;
   overflow:  hidden;
 }
 
 #dna_header ul {
   float: left;
-  margin-right: 5%;
+  margin: 0 3%;
+  padding:0;
 }
 
 #dna_header li {
@@ -36,6 +37,11 @@
   margin: 5px;
   font-size: 14px;
   text-align: left;
+  color:white;
+}
+
+#dna_header li > .equal {
+    width:88px;
 }
 
 #dna_content {
