--- a/server/templates/dna.html
+++ b/server/templates/dna.html
@@ -11,7 +11,7 @@
         <div id="dna_content">
         </div> <!-- end of dna_content -->
     </div> <!-- end of dna_main -->
-    <div class="ui inverted basic button" id="showNewDna"><i class="align justify icon"></i></div>
+<!--     <div class="ui inverted basic button" id="showNewDna"><i class="align justify icon"></i></div> -->
 </div> <!-- end of dna_container -->
 
 
