--- a/server/static/css/dna.css
+++ b/server/static/css/dna.css
@@ -22,14 +22,15 @@
 
 #dna_header {
   width: 100%;
-  height: 22%; 
+  height: 22%;
+  overflow:auto;
 }
 
 #dna_header ul {
   float: left;
-  margin: 0 2% 0 2%;
+  margin: 0 2px 0 2px;
   padding:0;
-  width: 25%;
+  max-width:32%;
 }
 
 #dna_header li {
